@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: December 3, 2008</p>
+      <p>Last Updated: December 4, 2008</p>
     </td>
   </tr>
 </table>
@@ -1212,6 +1212,7 @@ nuttx-0.3.20 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  run in more-or-less realtime.
 	* Added more more extensive window support:  frames, toolbars, etc.
 	* Added support for bitmap fonts
+	* Integrated the new font support with a font test in examples/nx
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
